<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.businesscard.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e6eeff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif-monospace"
            android:text="@string/restaurant_name"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/italianchef" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif-monospace"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/websiteimage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/website" />

            <TextView
                android:id="@+id/websitetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/websiteimage"
                android:layout_toRightOf="@id/websiteimage"
                android:autoLink="web"
                android:fontFamily="serif-monospace"
                android:text="@string/website"
                android:textColor="#000000"
                android:textColorLink="@color/colorPrimary"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/phoneimage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/websiteimage"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/phonetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/websitetext"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/phoneimage"
                android:layout_toRightOf="@id/phoneimage"
                android:autoLink="phone"
                android:fontFamily="serif-monospace"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textColorLink="#000000"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/mapimage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/phoneimage"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phonetext"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/mapimage"
                android:layout_toRightOf="@id/mapimage"
                android:autoLink="map"
                android:fontFamily="serif-monospace"
                android:text="@string/address"
                android:textColor="#000000"
                android:textColorLink="#000000"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>